# imdb-cli

./: Cargo.toml  rustfmt.toml
src/: file.rs  hash.rs  main.rs  models.rs  store.rs
