[package]
name = "imdb-cli"
version = "0.1.0"
authors = ["GeorgeLatsev <GeorgeLatsev@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"

reqwest = { version = "0.11", features = ["blocking"] }
bytes = "1.0.1"

sha2 = "0.9.2"

indicatif = "0.15.0"
console = "0.14.0"

futures = "0.3.12"

flate2 = "1.0.19"
csv = "1.1.5"

chrono = "0.4.19"

sled = "0.34.6"

serde = "1.0.122"
serde_derive = "1.0.122"
serde_json = "1.0.61"
